Fixing form coordinates

--- a/about_us/index.html
+++ b/about_us/index.html
@@ -182,7 +182,7 @@
                     <textarea class="form-control" name="name" rows="4" cols="80" placeholder="Type a message..."></textarea>
                 </div>
                 <div class="send-button">
-                    <a href="mailto:m@inkblotlabs.org" class="btn btn-primary btn-round btn-block btn-lg">Send Message</a>
+                    <a href="mailto:email@inkblotlabs.org" class="btn btn-primary btn-round btn-block btn-lg">Send Message</a>
                 </div>
             </div>
 
